# FastFluxEvader

./: CMakeLists.txt  D4rk_Veil.py  README.md  build.bat  build.sh  setup.bat  setup.sh
src/: asm_integration.asm  asm_integration.hpp  fast_flux.cpp  fastflux.hpp  main.cpp  obfuscation.cpp  obfuscation.hpp  utils.cpp  utils.hpp
tests/: test_fast_flux.cpp  test_obfuscation.cpp
